added: IP rate limiting configuration

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,6 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1s",
+        "Limit": 5
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
 
