--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-resizable-panels": "^2.0.16",
+    "react-responsive": "^10.0.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
