--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
 		"react-hook-form": "^7.51.3",
 		"react-resizable-panels": "^2.0.16",
 		"react-responsive": "^10.0.0",
+		"recharts": "^2.12.7",
 		"shadergradient": "^1.2.12",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.2.2",
