--- a/frontend/package.json
+++ b/frontend/package.json
@@ -72,7 +72,8 @@
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.150.0",
 		"vaul": "^0.9.0",
-		"zod": "^3.22.4"
+		"zod": "^3.22.4",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@types/file-saver": "^2.0.7",
