--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,13 +56,16 @@
 		"file-saver": "^2.0.5",
 		"framer-motion": "^11.2.6",
 		"input-otp": "^1.2.4",
-		"lucide-react": "^0.368.0",
+		"lodash": "^4.17.21",
+		"lucide-react": "^0.395.0",
 		"next": "14.2.1",
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-day-picker": "^8.10.0",
 		"react-dom": "^18",
+		"react-grid-layout": "^1.4.4",
 		"react-hook-form": "^7.51.3",
+		"react-resizable": "^3.0.5",
 		"react-resizable-panels": "^2.0.16",
 		"react-responsive": "^10.0.0",
 		"recharts": "^2.12.7",
@@ -71,15 +74,19 @@
 		"tailwind-merge": "^2.2.2",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.150.0",
+		"uuid": "^10.0.0",
 		"vaul": "^0.9.0",
 		"zod": "^3.22.4",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@types/file-saver": "^2.0.7",
+		"@types/lodash": "^4.17.5",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/react-grid-layout": "^1.3.5",
+		"@types/uuid": "^9.0.8",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.1",
 		"postcss": "^8",
