updated: to enhance JSON serialization, improve CORS policy, update rate limiting, and integrate asynchronous database migrations

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -1,24 +1,38 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "IpRateLimiting": {
-    "EnableEndpointRateLimiting": true,
-    "StackBlockedRequests": false,
-    "RealIpHeader": "X-Real-IP",
-    "ClientIdHeader": "X-ClientId",
-    "HttpStatusCode": 429,
-    "GeneralRules": [
-      {
-        "Endpoint": "*",
-        "Period": "1s",
-        "Limit": 5
-      }
-    ]
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"IpRateLimiting": {
+		"EnableEndpointRateLimiting": true,
+		"StackBlockedRequests": false,
+		"RealIpHeader": "X-Real-IP",
+		"ClientIdHeader": "X-ClientId",
+		"HttpStatusCode": 429,
+		"GeneralRules": [
+			{
+				"Endpoint": "*",
+				"Period": "1s",
+				"Limit": 10
+			},
+			{
+				"Endpoint": "*",
+				"Period": "1m",
+				"Limit": 1000
+			},
+			{
+				"Endpoint": "*",
+				"Period": "1h",
+				"Limit": 10000
+			},
+			{
+				"Endpoint": "*",
+				"Period": "1d",
+				"Limit": 100000
+			}
+		]
+	},
+	"AllowedHosts": "*"
 }
-
