added: cookies-next and emoji-datasource-apple dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,8 +51,10 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"cmdk": "^1.0.0",
+		"cookies-next": "^4.2.1",
 		"date-fns": "^3.6.0",
 		"embla-carousel-react": "^8.0.2",
+		"emoji-datasource-apple": "^15.1.2",
 		"file-saver": "^2.0.5",
 		"framer-motion": "^11.2.6",
 		"input-otp": "^1.2.4",
