--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"clean": "shx rm -rf .next node_modules package-lock.json"
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.5.2",
@@ -15,7 +16,7 @@
 		"@fortawesome/free-regular-svg-icons": "^6.5.2",
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@fortawesome/react-fontawesome": "^0.2.0",
-		"@hookform/resolvers": "^3.3.4",
+		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -43,6 +44,7 @@
 		"@radix-ui/react-toggle": "^1.0.3",
 		"@radix-ui/react-toggle-group": "^1.0.4",
 		"@radix-ui/react-tooltip": "^1.0.7",
+		"@react-aria/calendar": "^3.5.10",
 		"@react-spring/three": "^9.7.3",
 		"@react-three/fiber": "^8.16.6",
 		"@tanstack/react-query": "^5.49.2",
@@ -63,6 +65,7 @@
 		"next": "14.2.1",
 		"next-themes": "^0.3.0",
 		"react": "^18",
+		"react-aria-components": "^1.3.0",
 		"react-day-picker": "^8.10.0",
 		"react-dom": "^18",
 		"react-grid-layout": "^1.4.4",
@@ -75,7 +78,7 @@
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.2.2",
 		"tailwindcss-animate": "^1.0.7",
-		"three": "^0.150.0",
+		"three": "^0.154.0",
 		"uuid": "^10.0.0",
 		"vaul": "^0.9.0",
 		"zod": "^3.22.4",
@@ -92,6 +95,7 @@
 		"eslint": "^8",
 		"eslint-config-next": "14.2.1",
 		"postcss": "^8",
+		"shx": "^0.3.4",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
 	}
