refactored: apply provider-based microservice architecture

--- a/ShowCalendar.API/appsettings.json
+++ b/ShowCalendar.API/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CalendarProviders": {
+    "Google": {
+      "Enabled": true
+    },
+    "Apple": {
+      "Enabled": true
+    },
+    "Microsoft": {
+      "Enabled": true
+    }
+  }
 }
